Fixed margin-top spacing with new top menu

--- a/client/src/styles/stylesUserHome.css
+++ b/client/src/styles/stylesUserHome.css
@@ -52,6 +52,9 @@
 
 /*Sort and filter buttons*/
 
+.topmenu-buffer {
+  height: 100px;
+}
 .container-sort {
   display: flex;
   justify-content: center;
